--- a/config
+++ b/config
@@ -11,6 +11,9 @@
 
 set $mod Mod4
 
+set $bg-color	#2f343f
+set $text-color #FFFFFF
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -36,7 +39,9 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+r exec dmenu_run
+#bindsym $mod+r exec dmenu_run
+bindsym $mod+r exec rofi -show run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -93,10 +98,11 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 set $workspace3 "3: Spotify"
+set $workspace2 "2: Firefox"
 
 # switch to workspace
 bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
@@ -108,7 +114,7 @@ bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
@@ -119,6 +125,7 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 for_window [class="Spotify"] move to workspace $workspace3
+for_window [class="Firefox"] move to workspace $workspace2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -157,6 +164,11 @@ bindsym $mod+d mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+	position top
+	colors {
+		background $bg-color
+		inactive_workspace $bg-color $bg-color $text-color
+	}
 }
 
 # Pulse Audio controls
@@ -171,4 +183,15 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 exec spotify
+exec firefox
 exec --no-startup-id feh --bg-fill ~/.background-image.jpg
+exec compton -f
+
+# Modification pour i3 GAPS
+for_window [class="^.*"] border pixel 2
+
+gaps inner 7
+
+smart_gaps on
+# FIN - i3 GAPS
+
