--- a/config
+++ b/config
@@ -11,8 +11,9 @@
 
 set $mod Mod4
 
-set $bg-color	#2f343f
+set $bg-color	#27292A
 set $text-color #FFFFFF
+set $highlight-color #373B41
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -168,6 +169,7 @@ bar {
 	colors {
 		background $bg-color
 		inactive_workspace $bg-color $bg-color $text-color
+		focused_workspace $text-color $highlight-color $text-color
 	}
 }
 
