--- a/i3/config
+++ b/i3/config
@@ -184,7 +184,7 @@ bindsym XF86AudioStop exec playerctl stop
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+Shift+L exec i3lock-fancy
+bindsym $mod+Escape exec i3lock-fancy
 
 exec spotify
 exec firefox
