Ajouter une script de backup dans dans data

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -655,11 +655,11 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
-# Custom movement
+# Custom
 map gr cd ~/repos
 map tr tab_new ~/repos
 map mr shell mv %s ~/repos
 map yr shell cp %s ~/repos
 
-# Backup
 map ss shell scp %f root@serveur.bck:/root/backup/.
+map sd shell cp %f /mnt/data/Backup/.
