--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -15,3 +15,6 @@ settings:
     - '{file}'
     - -c
     - normal {line}G{column0}l
+  url.searchengines:
+    global:
+      DEFAULT: https://duckduckgo.com/?q={}
