Modification dans divers fichiers config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -661,5 +661,12 @@ map tr tab_new ~/repos
 map mr shell mv %s ~/repos
 map yr shell cp %s ~/repos
 
+map gi cd ~/images
+map ti tab_new ~/images
+map mi shell mv %s ~/images
+map yi shell cp %s ~/images
+
 map ss shell scp %f root@serveur.bck:/root/backup/.
 map sd shell cp %f /mnt/data/Backup/.
+
+map bg shell cp %f ~/.background-image.jpg | feh --bg-fill ~/.background-image.jpg
