--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -666,7 +666,14 @@ map ti tab_new ~/images
 map mi shell mv %s ~/images
 map yi shell cp %s ~/images
 
+map gd cd /mnt/data
+map td tab_new /mnt/data
+map md shell mv %s /mnt/data
+map yd shell cp %s /mnt/dataimages
+
 map ss shell scp %f root@serveur.bck:/root/backup/.
 map sd shell cp %f /mnt/data/Backup/.
 
 map bg shell cp %f ~/.background-image.jpg | feh --bg-fill ~/.background-image.jpg
+
+map cb shell ~/.config/ranger/create-bundle.sh
