--- a/.config/i3/config
+++ b/.config/i3/config
@@ -175,6 +175,8 @@ bindsym XF86AudioPrev exec playerctl previous
 
 bindsym $mod+Escape exec i3lock-fancy
 bindsym $mod+e exec urxvt -e ranger
+bindsym $mod+p exec redshift -P -O 4500
+bindsym $mod+Shift+p exec redshift -P -O 5800
 
 exec spotify
 exec qutebrowser
