--- a/.config/i3/config
+++ b/.config/i3/config
@@ -187,6 +187,9 @@ exec_always --no-startup-id numlockx on
 # Modification pour i3 GAPS
 for_window [class="^.*"] border pixel 2
 
+# RDesktop Full Screen
+for_window [class="^rdesktop"] move workspace number 5; floating disable
+
 gaps inner 10
 
 smart_gaps on
