--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -674,6 +674,6 @@ map yd shell cp %s /run/media/etienne/data/images
 map ss shell scp %f root@serveur.bck:/root/backup/.
 map sd shell cp %f /run/media/etienne/data/Backup/.
 
-map bg shell cp %f ~/.background-image.jpg | feh --bg-fill ~/.background-image.jpg | wal -i %f
+map bg shell cp %f ~/.background-image.jpg | feh --bg-fill ~/.background-image.jpg | wal -i %f -a "80"
 
 map cb shell ~/.config/ranger/create-bundle.sh
