--- a/.config/i3/config
+++ b/.config/i3/config
@@ -195,6 +195,7 @@ bindsym $mod+Escape exec i3lock-fancy
 bindsym $mod+e exec urxvt -e ranger
 bindsym $mod+p exec redshift -P -O 4500
 bindsym $mod+Shift+p exec redshift -P -O 5800
+bindsym $mod+m exec emacs
 
 exec spotify
 exec qutebrowser
