--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,6 +3,7 @@ set $mod Mod4
 set $bg-color	#27292A
 set $text-color #FFFFFF
 set $highlight-color #373B41
+set $term st
 
 # Set colors from Xresources
 # Change 'color7' and 'color2' to whatever colors you want i3 to use 
@@ -41,7 +42,7 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -192,7 +193,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 bindsym $mod+Escape exec i3lock-fancy
-bindsym $mod+e exec urxvt -e ranger
+bindsym $mod+e exec st -e ranger
 bindsym $mod+p exec redshift -P -O 4500
 bindsym $mod+Shift+p exec redshift -P -O 5800
 bindsym $mod+m exec emacs
