--- a/.config/i3/config
+++ b/.config/i3/config
@@ -48,8 +48,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+r exec dmenu_run
-bindsym $mod+r exec rofi -show run
+bindsym $mod+r exec ~/.dmenu.sh
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
