--- a/.config/i3/config
+++ b/.config/i3/config
@@ -133,7 +133,7 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 for_window [class="Spotify"] move to workspace $workspace3
-for_window [class="qutebrowser"] move to workspace $workspace2
+for_window [class="surf"] move to workspace $workspace2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -198,7 +198,7 @@ bindsym $mod+Shift+p exec redshift -P -O 5800
 bindsym $mod+m exec emacs
 
 exec spotify
-exec qutebrowser
+exec surf
 exec xset -dpms s off
 exec --no-startup-id feh --bg-fill ~/.background-image.jpg
 exec compton -f
