Revert to old config

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -6,7 +6,7 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "xrender";
+backend = "glx";
 
 #################################
 #
@@ -186,7 +186,7 @@ vsync = "opengl-swc";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
-dbe = true;
+dbe = false;
 # Painting on X Composite overlay window. Recommended.
 paint-on-overlay = true;
 
